-------------------------------------------------

 * Extended gpgme_op_decrypt* and gpgme_op_verify* to allow writing the
   output directly to a file.  [T6550]

 * Extended gpgme_op_encrypt*, gpgme_op_encrypt_sign*, and gpgme_op_sign*
   to allow reading the input data directly from a file.  [T6550]

 * Add information about designated revocation keys.  [T7118]

 * qt: Allow reading the data to decrypt/encrypt/sign/verify directly from
   files.  [T6550]

 * qt: Allow writing the decrypted/encrypted/signed/verified data directly
   to files.  [T6550]

 * Interface changes relative to the 1.23.2 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GPGME_ENCRYPT_FILE                      NEW.
 GPGME_SIG_MODE_FILE                     NEW.
 gpgme_key_t                             EXTENDED: New field 'revkeys'.
 gpgme_revocation_key_t                  NEW.
 cpp: Context::EncryptFile               NEW.
 cpp: SignatureMode::SignFile            NEW.
 qt: DecryptVerifyJob::setInputFile      NEW.
 qt: DecryptVerifyJob::inputFile         NEW.
 qt: DecryptVerifyJob::setOutputFile     NEW.
 qt: DecryptVerifyJob::outputFile        NEW.
 qt: EncryptJob::setRecipients           NEW.
 qt: EncryptJob::recipients              NEW.
 qt: EncryptJob::setInputFile            NEW.
 qt: EncryptJob::inputFile               NEW.
 qt: EncryptJob::setOutputFile           NEW.
 qt: EncryptJob::outputFile              NEW.
 qt: EncryptJob::setEncryptionFlags      NEW.
 qt: EncryptJob::encryptionFlags         NEW.
 qt: SignEncryptJob::setSigners          NEW.
 qt: SignEncryptJob::signers             NEW.
 qt: SignEncryptJob::setRecipients       NEW.
 qt: SignEncryptJob::recipients          NEW.
 qt: SignEncryptJob::setInputFile        NEW.
 qt: SignEncryptJob::inputFile           NEW.
 qt: SignEncryptJob::setOutputFile       NEW.
 qt: SignEncryptJob::outputFile          NEW.
 qt: SignEncryptJob::setEncryptionFlags  NEW.
 qt: SignEncryptJob::encryptionFlags     NEW.