@@ -9,6 +9,9 @@ Noteworthy changes in version 1.24.0 (unrelease)
 
  * Add information about designated revocation keys.  [T7118]
 
+ * cpp: Provide information about designated revocation keys for a Key.
+   [T7118]
+
  * qt: Allow reading the data to decrypt/encrypt/sign/verify directly from
    files.  [T6550]
 
@@ -23,6 +26,10 @@ Noteworthy changes in version 1.24.0 (unrelease)
  gpgme_revocation_key_t                  NEW.
  cpp: Context::EncryptFile               NEW.
  cpp: SignatureMode::SignFile            NEW.
+ cpp: RevocationKey                      NEW.
+ cpp: Key::revocationKey                 NEW.
+ cpp: Key::numRevocationKeys             NEW.
+ cpp: Key::revocationKeys                NEW.
  qt: DecryptVerifyJob::setInputFile      NEW.
  qt: DecryptVerifyJob::inputFile         NEW.
  qt: DecryptVerifyJob::setOutputFile     NEW.
